# claude-tech-squad

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TASKS.md
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ai-docs/: baseline-dogfood-report.txt  baseline-dogfood.txt  baseline-smoke-test.txt  baseline-validation.txt  product-vision.md  resumo-tecnico.md
docs/: AGENT-CONTRACT.md  CONTEXT-ROLLOVER.md  DOGFOODING.md  ENGINEERING-OPERATING-SYSTEM.md  EXECUTION-TRACE.md  GETTING-STARTED.md  GOLDEN-RUN-GUIDE.md  GOLDEN-RUNS.md  GOVERNANCE.md  HARNESS-ENGINEERING.md  HOW-TO-CHANGE-AND-PUBLISH.md  MANUAL.md  OPERATIONAL-PLAYBOOK.md  PUBLIC-SURFACE.md  README.md  RELEASING.md  RUNTIME-POLICY.md  SAFETY.md  SDK.md  SKILL-CONTRACT.md  SKILL-SELECTOR.md  THREE-DISCIPLINES.md  USAGE-BOUNDARIES.md
examples/: sdk_dashboard_report.py  sdk_onboarding_plan.py  sdk_ticket_plan.py
fixtures/dogfooding/llm-rag/: CLAUDE.md  README.md  pyproject.toml
fixtures/dogfooding/llm-rag/src/eval/: eval_harness.py
fixtures/dogfooding/llm-rag/src/pipeline/: embedder.py  ingestor.py  retriever.py
fixtures/dogfooding/llm-rag/tests/: test_pipeline.py
scripts/: build-release-bundle.sh  capture-golden-run.sh  check-public-surface-docs.py  dogfood-report.sh  dogfood.sh  open-dashboard.sh  prepare-release-metadata.sh  release.sh  render-public-surface-docs.py  smoke-test.sh  start-golden-run.sh  test-readme-smoke.sh  test-readme-tmux-smoke.sh  test-render.sh  test-sdk.sh  test-ticket-sources.py  validate.sh  (+2 more)
(+301 files in other folders)
