[project]
name = "llm-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "ragas>=0.1.0",
    "chromadb>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
